--- a/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
+++ b/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
@@ -12,7 +12,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\bogdan\Desktop\</PublishUrl>
+    <PublishUrl>C:\Users\bogdan\Desktop\Publicat\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -22,7 +22,11 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>1</ApplicationRevision>
+    <TargetCulture>en</TargetCulture>
+    <ProductName>RelInt - GCdD %28Gestiunea Cererilor de Deplasare%29</ProductName>
+    <PublisherName>UAIC, FEAA</PublisherName>
+    <SuiteName>SIA - Sisteme Informationale pentru Birotica</SuiteName>
+    <ApplicationRevision>3</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -99,6 +103,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>UAIC_icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
@@ -134,11 +141,23 @@
     <Compile Include="frmCerereModificare.Designer.cs">
       <DependentUpon>frmCerereModificare.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmDespreApp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDespreApp.Designer.cs">
+      <DependentUpon>frmDespreApp.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmGCD.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmGCD.Designer.cs">
       <DependentUpon>frmGCD.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmRealizatori.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmRealizatori.Designer.cs">
+      <DependentUpon>frmRealizatori.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -151,8 +170,14 @@
     <EmbeddedResource Include="frmCerereModificare.resx">
       <DependentUpon>frmCerereModificare.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmDespreApp.resx">
+      <DependentUpon>frmDespreApp.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmGCD.resx">
       <DependentUpon>frmGCD.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmRealizatori.resx">
+      <DependentUpon>frmRealizatori.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -162,6 +187,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -193,6 +219,15 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="UAIC_icon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="UAIC_logo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="UAIC_logo_bw_1024.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
