--- a/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
+++ b/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
@@ -24,7 +24,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <TargetCulture>en</TargetCulture>
     <ProductName>RelInt - GCdD %28Gestiunea Cererilor de Deplasare%29</ProductName>
-    <PublisherName>UAIC, FEAA</PublisherName>
+    <PublisherName>SIA - GCdD</PublisherName>
     <SuiteName>SIA - Sisteme Informationale pentru Birotica</SuiteName>
     <ApplicationRevision>14</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
