--- a/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
+++ b/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
@@ -172,6 +172,12 @@
     <Compile Include="frmDespreApp.Designer.cs">
       <DependentUpon>frmDespreApp.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmEditareRector.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmEditareRector.Designer.cs">
+      <DependentUpon>frmEditareRector.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmGCD.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -224,6 +230,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmDespreApp.resx">
       <DependentUpon>frmDespreApp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmEditareRector.resx">
+      <DependentUpon>frmEditareRector.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmGCD.resx">
       <DependentUpon>frmGCD.cs</DependentUpon>
