--- a/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
+++ b/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
@@ -148,11 +148,11 @@
     <Compile Include="frmCautareCerere.Designer.cs">
       <DependentUpon>frmCautareCerere.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmCerereBECA.cs">
+    <Compile Include="frmOrdinDeDeplasare.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmCerereBECA.Designer.cs">
-      <DependentUpon>frmCerereBECA.cs</DependentUpon>
+    <Compile Include="frmOrdinDeDeplasare.Designer.cs">
+      <DependentUpon>frmOrdinDeDeplasare.cs</DependentUpon>
     </Compile>
     <Compile Include="frmCerereInregistrare.cs">
       <SubType>Form</SubType>
@@ -219,8 +219,8 @@
     <EmbeddedResource Include="frmCautareCerere.resx">
       <DependentUpon>frmCautareCerere.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmCerereBECA.resx">
-      <DependentUpon>frmCerereBECA.cs</DependentUpon>
+    <EmbeddedResource Include="frmOrdinDeDeplasare.resx">
+      <DependentUpon>frmOrdinDeDeplasare.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmCerereInregistrare.resx">
       <DependentUpon>frmCerereInregistrare.cs</DependentUpon>
