--- a/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
+++ b/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
@@ -29,6 +29,7 @@
     <ApplicationRevision>23</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
+    <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -220,6 +221,12 @@
     <Compile Include="frmListaCereriExistente.Designer.cs">
       <DependentUpon>frmListaCereriExistente.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmCopieDeSiguranta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCopieDeSiguranta.Designer.cs">
+      <DependentUpon>frmCopieDeSiguranta.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmResetareAplicatie.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -266,6 +273,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmListaCereriExistente.resx">
       <DependentUpon>frmListaCereriExistente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCopieDeSiguranta.resx">
+      <DependentUpon>frmCopieDeSiguranta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmResetareAplicatie.resx">
       <DependentUpon>frmResetareAplicatie.cs</DependentUpon>
