comit101 - Wix Installer
Creare WiX installer pentru MSI (proiect WiX MSI RelInt-GCdD) si pentru
Bootstrapper (WiX BS RelInt-GCdD)

--- a/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
+++ b/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
@@ -317,6 +317,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="RelInt - Gestiune cereri de deplasare_TemporaryKey.pfx" />
+    <None Include="RelInt-GCdDLicentiere.rtf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -349,7 +350,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="UAIC_logo_mic.png" />
     <None Include="RelInt-GCdD.manifest" />
+    <Content Include="RelInt-GCdDLicentiere.html" />
     <Content Include="RelIntBD-CRPO.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
