--- a/.gitignore
+++ b/.gitignore
@@ -181,4 +181,5 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
-/VSI RelInt-GCdD
+/D:\RelInt\WiX BS RelInt-GCdD\bin\Debug
+/D:\RelInt\WiX MSI RelInt-GCdD\bin\Debug
