--- a/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
+++ b/RelInt - Gestiune cereri de deplasare/RelInt - Gestiune cereri de deplasare.csproj
@@ -152,6 +152,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExcelUtility.cs" />
     <Compile Include="frmCautareCerere.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -212,11 +213,11 @@
     <Compile Include="frmOrdineaDeZi.Designer.cs">
       <DependentUpon>frmOrdineaDeZi.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmRapoarte.cs">
+    <Compile Include="frmSituatieDeplasari.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmRapoarte.Designer.cs">
-      <DependentUpon>frmRapoarte.cs</DependentUpon>
+    <Compile Include="frmSituatieDeplasari.Designer.cs">
+      <DependentUpon>frmSituatieDeplasari.cs</DependentUpon>
     </Compile>
     <Compile Include="frmRealizatori.cs">
       <SubType>Form</SubType>
@@ -280,8 +281,8 @@
     <EmbeddedResource Include="frmOrdineaDeZi.resx">
       <DependentUpon>frmOrdineaDeZi.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmRapoarte.resx">
-      <DependentUpon>frmRapoarte.cs</DependentUpon>
+    <EmbeddedResource Include="frmSituatieDeplasari.resx">
+      <DependentUpon>frmSituatieDeplasari.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmRealizatori.resx">
       <DependentUpon>frmRealizatori.cs</DependentUpon>
@@ -421,6 +422,35 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="Microsoft.Office.Core">
+      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>5</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="Microsoft.Office.Interop.Excel">
+      <Guid>{00020813-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>7</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="VBIDE">
+      <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>5</VersionMajor>
+      <VersionMinor>3</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
