--- a/.gitignore
+++ b/.gitignore
@@ -181,5 +181,5 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
-/WiX BS RelInt-GCdD/bin
-/WiX MSI RelInt-GCdD/bin
+/WiX BS RelInt-GCdD/bin/
+/WiX MSI RelInt-GCdD/bin/
